初始化route、store 引入quasar组件

--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
+<!--
+ * @Description: Description of this file
+ * @Version: 2.0
+ * @Author: 夏明
+ * @Date: 2022-07-21 21:10:04
+ * @LastEditors: 夏明
+ * @LastEditTime: 2022-07-21 21:39:00
+-->
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>National-Data-Visualization</title>
+</head>
+
+<body>
+  <div id="app"></div>
+  <script type="module" src="/src/main.js"></script>
+</body>
+
 </html>
